--- a/form-v2.html
+++ b/form-v2.html
@@ -109,17 +109,17 @@
 
             if (version == 2) {
                 // Get HTML head element
-                link.href = "https://ramanmiddha90.github.io/ADSolarAsests/styles/main_v2.css";
-                $("#logo").attr("src", "https://ramanmiddha90.github.io/ADSolarAsests/objects/sandoz-logo_6.svg");
+                link.href = "https://ramanmiddha90.github.io/AdB2C_UI/styles/main_v2.css";
+                $("#logo").attr("src", "https://ramanmiddha90.github.io/AdB2C_UI/objects/sandoz-logo_6.svg");
             }
             else if (version == 3) {
-                link.href = "https://ramanmiddha90.github.io/ADSolarAsests/styles/main_v2.css";
-                $("#logo").attr("src", "https://ramanmiddha90.github.io/ADSolarAsests/objects/sandoz_logo_sl.svg");
+                link.href = "https://ramanmiddha90.github.io/AdB2C_UI/styles/main_v2.css";
+                $("#logo").attr("src", "https://ramanmiddha90.github.io/AdB2C_UI/objects/sandoz_logo_sl.svg");
 
             }
             else {
-                link.href = "https://ramanmiddha90.github.io/ADSolarAsests/styles/main.css";
-                $("#logo").attr("src", "https://ramanmiddha90.github.io/ADSolarAsests/objects/sandoz-logo_6-1.svg");
+                link.href = "https://ramanmiddha90.github.io/AdB2C_UI/styles/main.css";
+                $("#logo").attr("src", "https://ramanmiddha90.github.io/AdB2C_UI/objects/sandoz-logo_6-1.svg");
             }
             // Append link element to HTML head
             head.appendChild(link);
@@ -195,7 +195,7 @@
 </head>
 <body>
     <div class="wrapper">
-        <img id="logo" src="https://ramanmiddha90.github.io/ADSolarAsests/objects/sandoz-logo_6.svg" alt="Sandoz Logo"  style = "display:none;">
+        <img id="logo" src="https://ramanmiddha90.github.io/AdB2C_UI/objects/sandoz-logo_6.svg" alt="Sandoz Logo"  style = "display:none;">
         <div id="form">
             <div id="api" data-name="SelfAsserted" style="display: none;" >
               </div>
