--- a/BlockPage.html
+++ b/BlockPage.html
@@ -118,7 +118,7 @@
     <div class="wrapper">
         <img id="logo" src="https://ramanmiddha90.github.io/AdB2C_UI/objects/sandoz-logo_6.svg" alt="Sandoz Logo" style="display:none;">
         <div id="form">
-            <div id="api" data-name="SelfAsserted" style="display: none;" class="invitedRegistration">
+            <div id="api" data-name="SelfAsserted" style="display: none;" class="b2cPopup">
             </div>
         </div>
     </div>
