--- a/BlockPage.html
+++ b/BlockPage.html
@@ -120,6 +120,8 @@
         <div id="form">
             <div id="api" data-name="SelfAsserted" style="display: none;" class="b2cPopup">
             </div>
+            <button id="cancelOperation" type="submit" form="attributeVerification" aria-disabled="false" aria-label="Continue">Cancel
+            </button>
         </div>
     </div>
 
