--- a/BlockPage.html
+++ b/BlockPage.html
@@ -112,7 +112,7 @@
             var intervalHandle = setInterval(
                 function () {
                     if (window.pageReady) {
-
+                        handleCancel();
                         applyB2CAddOns();
                     }
                 }, 50);
