--- a/BlockPage.html
+++ b/BlockPage.html
@@ -38,6 +38,7 @@
 
         var handleCancel = function () {
             $("#cancelOperation").on("click", function () {
+                alert("dd");
                 $("#operationType").val("B");
                 $("#continue").click();
             });
