--- a/BlockPage.html
+++ b/BlockPage.html
@@ -120,6 +120,7 @@
                     if (window.pageReady) {
                         handleCancel();
                         applyB2CAddOns();
+                        clearInterval(intervalHandle);
                     }
                 }, 50);
         }());
