--- a/BlockPage.html
+++ b/BlockPage.html
@@ -112,7 +112,7 @@
         (function onPageReady() {
             if (window.pageReady) {
                 applyCSS();
-                handleCancel();
+               // handleCancel();
                 /*  fillDDSolar();*/
             }
             var intervalHandle = setInterval(
@@ -126,7 +126,7 @@
         }());
         applyCSS();
         debugger;
-        handleCancel();
+        //handleCancel();
     </script>
 </head>
 <body>
