--- a/BlockPage.html
+++ b/BlockPage.html
@@ -125,7 +125,7 @@
                 }, 50);
         }());
         applyCSS();
-        debugger;
+        //debugger;
         //handleCancel();
     </script>
 </head>
