--- a/BlockPage.html
+++ b/BlockPage.html
@@ -64,7 +64,7 @@
 
             link.type = 'text/css';
 
-               link.href = "https://prod.cms.static.my-sandoz.com/b2c_uat/b2c_uat_webapp/styles/main_v2.css";
+            link.href = "https://ramanmiddha90.github.io/AdB2C_UI/styles/main_v2.css";
                  $("#logo").attr("src", "https://ramanmiddha90.github.io/AdB2C_UI/objects/sandoz-logo_6.svg");
             // Append link element to HTML head
             head.appendChild(link);
